- 02: Bugfix #233: Element insertion by keys F6 and F8 didn't work <2>
- 02: Issue #305: Diagram name and dirtiness changes notified to arranger index <2>
- 02: Enh. #333: Compound comparison operators displayed as symbols ≠, ≤, ≥ <2>
- 02: Enh. #335: Pascal variable declarations in instructions tolerated <2>
- 02: Bugfix #336: Variable list proposed by code generators for declaration <2>
- 02: Issue #306: Structorizer may load several diagrams on command line start <2>

Version: 3.26 (2017.01.06)
- 01: Issue #213: FOR transmutation now inserts WHILE parser preferences <2>
- 01: Issue #213: Selected state of FOR transmutation result now visible <2>
- 01: Bugfix #241: Translation bugs for element editor mended <2>
- 01: Bugfix #243: Forgotten translations for some message boxes [Rolf Schmidt]<2>
- 01: Bugfix #244: Flawed logic for the save actions mended <2>
- 01: Bugfix #246: Executor now checks conditions for Boolean results <2>
- 01: Issue #245: Browser launching workaround for Linux systems [Rolf Schmidt]2
- 01: Bugfix #247: Defective BASH export of ENDLESS loops [Rolf Schmidt]2
- 01: Issue #248: Linux workaround for setting breakpoint triggers <2>
- 01: Issue #248: Linux workaround for number conversions in Locales and Executor <2>
- 01: Enh. #249: New Analyser check for subroutine argument parenthesis <2>
- 01: Analyser preferences order modified <2>
- 01: Enh. #250: FOR/FOR-IN loop editor partially redesigned <2>
- 01: Bugfix #251: Look and feel problems with Executor console window <2>
- 01: Bugfix #252: Analyser FOR loop check (14) should tolerate ":=" vs "<-" <2>
- 01: Saved diagrams now prepared for #253 (parser info included) <2>
- 01: Bugfix #254: CASE execution failed when parser keywords were used <2>
- 01: Enh. #255: Analyser now names the assumed loop variables if supernumerous <2>
- 02: Enh. #253: Keyword refactoring option for loading diagrams (files ≥ 3.25-01) <2>
- 02: Enh. #253: Keyword refactoring offer on changing parser preferences <2>