@@ -18,7 +18,8 @@ Current development version: 3.26-02 (2017.01.27)
 - 02: Enh. #333: Compound comparison operators displayed as symbols ≠, ≤, ≥ <2>
 - 02: Enh. #335: Pascal variable declarations in instructions tolerated <2>
 - 02: Bugfix #336: Variable list proposed by code generators for declaration <2>
-- 02: Issue #306: Structorizer may load several diagrams on command line start <2>
+- 02: Issue #306: Possibility to start with several diagrams from command line <2>
+- 02: Enh. #290: Start from command line with Arranger files as arguments, too <2>
 
 Version: 3.26 (2017.01.06)
 - 01: Issue #213: FOR transmutation now inserts WHILE parser preferences <2>
